@@ -34,7 +34,7 @@
 	</p>
 	<% if @deployment.completed? %>
   	<p>
-  	  <%= link_to "Repeat", new_project_stage_deployment_path(current_project, current_stage) + '?task=' + h(@deployment.task), :class => 'arrow_link'  %>
+  	  <%= link_to "Repeat", new_project_stage_deployment_path(current_project, current_stage) + '?repeat=' + h(@deployment.id), :class => 'arrow_link'  %>
   	</p>
 	<% end %>
   </div>
