@@ -29,7 +29,7 @@
         <td style="padding:3px 0px 0px 0px;" valign="middle" align="center"><%= image_tag('peritor_theme/' + deployment.status_image)%></td>
         <td>
           <% if deployment.completed? %>
-            <%= link_to "Repeat", new_project_stage_deployment_path(deployment.stage.project, deployment.stage) + '?task=' + h(deployment.task)  %>
+            <%= link_to "Repeat", new_project_stage_deployment_path(deployment.stage.project, deployment.stage) + '?repeat=' + h(deployment.id)  %>
           <% end %>
         </td>
       </tr>
